--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ api-key
 *.txt
 .env
 *.csv
+/dimensions*
 
 # Ignore all files in the site-packages directory created by pip install
 /site-packages/
