--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ api-key
 .env
 *.csv
 /dimensions*
+google789a721a7530f0cc.html
 
 # Ignore all files in the site-packages directory created by pip install
 /site-packages/
